--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "src/*": ["src/*"]
+    },
+    "noImplicitAny": false,
     "target": "es5",
     "lib": [
       "dom",
@@ -21,7 +26,7 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "./src"
   ],
   "exclude": [
     "node_modules",
