--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
+    "redux-promise-middleware": "^6.1.2",
     "typescript": "^3.9.7"
   },
   "scripts": {
