--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.0",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-xhr-backend": "^3.2.2",
