--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/reactstrap": "^8.5.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "classnames": "^2.2.6",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-http-backend": "^1.0.17",
